--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -56,13 +56,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gqd-bv-5mP">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="122" id="gqd-bv-5mP" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="122"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gqd-bv-5mP" id="PbP-rc-piy">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TYD-lb-3pf">
+                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="IGu-ux-gTV"/>
+                                                <constraint firstAttribute="height" constant="65" id="X52-Zx-OBD"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="User Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrS-Cg-9QH">
+                                            <rect key="frame" x="89" y="11" width="85.5" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="za8-Lc-99O">
+                                            <rect key="frame" x="89" y="34.5" width="270" height="76.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="za8-Lc-99O" firstAttribute="leading" secondItem="TYD-lb-3pf" secondAttribute="trailing" constant="8" id="2Qy-XE-cW6"/>
+                                        <constraint firstItem="hrS-Cg-9QH" firstAttribute="leading" secondItem="TYD-lb-3pf" secondAttribute="trailing" constant="8" id="DiK-ge-edK"/>
+                                        <constraint firstItem="za8-Lc-99O" firstAttribute="trailing" secondItem="PbP-rc-piy" secondAttribute="trailingMargin" id="R0u-OQ-5aG"/>
+                                        <constraint firstItem="TYD-lb-3pf" firstAttribute="leading" secondItem="PbP-rc-piy" secondAttribute="leadingMargin" id="R1a-w9-pRR"/>
+                                        <constraint firstItem="za8-Lc-99O" firstAttribute="bottom" secondItem="PbP-rc-piy" secondAttribute="bottomMargin" id="bU1-MV-rJB"/>
+                                        <constraint firstItem="hrS-Cg-9QH" firstAttribute="top" secondItem="PbP-rc-piy" secondAttribute="topMargin" id="g6v-H8-WNy"/>
+                                        <constraint firstItem="TYD-lb-3pf" firstAttribute="top" secondItem="PbP-rc-piy" secondAttribute="topMargin" id="koA-qu-OAj"/>
+                                        <constraint firstItem="za8-Lc-99O" firstAttribute="top" secondItem="hrS-Cg-9QH" secondAttribute="bottom" constant="4" id="sv5-Ve-omz"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="TYD-lb-3pf" id="BJY-58-ekH"/>
+                                    <outlet property="tweetContent" destination="za8-Lc-99O" id="pZo-N3-D5r"/>
+                                    <outlet property="userNameLabel" destination="hrS-Cg-9QH" id="fE2-E1-bFZ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -83,7 +119,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q3Y-ox-H5b" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="335" y="125"/>
+            <point key="canvasLocation" x="333.60000000000002" y="124.58770614692655"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="JDm-Ev-HhG">
